# Roster_App

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app_config/: default_config.yaml
assets/: formations.yaml  sample_roster.csv
docs/: acceptance_checklist.md
pages/: 1_Roster.py  2_Rotation_Builder.py  3_Reports_Exports.py  4_Admin_Tools.py
rotation_builder/: .gitignore  README.md  app.py  requirements.txt
rotation_builder/.streamlit/: config.toml
rotation_builder/assets/: sample_roster.csv
rotation_builder/rotation_core/: constants.py  csv_io.py  engine.py  engine_test_helpers.py  game.py  init.py  models.py  ui_helpers.py
rotation_builder/tests/: test_engine.py  test_game.py
rotation_core/: __init__.py  aliases.py  assignment.py  config.py  constants.py  constraints.py  explain.py  export_pdf.py  fairness.py  hungarian.py  io.py  models.py  ratings.py  scheduler.py  solver_heuristic.py  solver_ilp.py  suitability.py  validation.py
rotation_core/rotation_core/: __init__.py
sample_data/: roster_sample.csv
tests/: test_aliases.py  test_assignment.py  test_fairness.py  test_hungarian.py  test_validation.py
