
```toml
# FILE: pyproject.toml
[tool.poetry]
name = "coach-rotation-generator"
version = "0.1.0"
description = "Coach-only football rotation generator (Streamlit app) enforcing fairness and position eligibility."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.24"
pandas = "^1.5"
numpy = "^1.23"
reportlab = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ruff = "^0.0"
black = "^22.3.0"
mypy = "^1.2.0"
pre-commit = "^3.2.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = 3.10
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
