# FILE: pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coach-rotation-generator"
version = "0.1.0"
description = "Coach-only football rotation generator (Streamlit app) enforcing fairness and position eligibility."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "streamlit>=1.32,<1.40",
  "pandas>=2.1,<2.3",
  "numpy>=1.26,<2.0",
  "pydantic>=1.10,<2.0",  # using v1.x API (.dict())
  "reportlab>=4.0,<5.0"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
